--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+        - ~/.aws:/root/.aws:ro
+    privileged: true
+    environment: 
+      - AWSSNSTOPICARN=snsTopicArn
