--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python-dotenv = "^0.13.0"
 bme680 = "^1.0.5"
 apscheduler = "^3.6.3"
 smbus = "^1.1.post2"
+tenacity = "^6.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
